--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Online Judge</title>
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
